# amtrelayd

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
src/: amtrelayd.pc.in  config.c  main.c  memory.c  memory.h  memory_private.h  packet_building.c  recv.c  relay.h  test-amtrelayd.c  tree.c
